# sweetPy

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
Tests/: CMakeLists.txt  CPythonClassTestModule.cpp  CPythonClassTestModule.h  EmbededPython.h  PythonEmbedder.h  Tests.cpp
cmake/: FindCore.cmake  FindFlatBuffers.cmake  FindGoogleTest.cmake  FindPython.cmake  InstallCore.cmake  InstallFlatBuffer.cmake  InstallGoogleTest.cmake  Utility.cmake  installThirdParty.cmake
docs/: Dictionary.md  UserType.md  Utilities.md
example/: CMakeLists.txt  example.cpp
include/: Clazz.h  Enum.h  InitModule.h  Module.h  sweetPy.h
include/Core/: Assert.h  Deleter.h  PythonAssist.h  SPException.h  Stack.h  Traits.h
include/Detail/: CPythonEnumValue.h  CPythonObject.h  CPythonType.h  ClazzContext.h  ClazzPyType.h  ConcreteFunction.h  Constructor.h  DictionaryElement.h  Member.h  MetaClass.h  ModuleContext.h  ReferenceType.h  TypedMemberAccessor.h  TypesContainer.h
include/Types/: AsciiString.h  Container.h  DateTime.h  Dictionary.h  Function.h  List.h  TimeDelta.h  Tuple.h
include/Utility/: Serialize.h  SerializeContext.h  SerializeTypes.h  Types_generated.h
src/: CPyModuleContainer.cpp  CPyModuleContainer.h  CPythonArgument.h  CPythonClass.cpp  CPythonClass.h  CPythonClassType.h  CPythonConcreteFunction.h  CPythonConstructor.h  CPythonEnum.cpp  CPythonEnum.h  CPythonEnumValue.h  CPythonFunction.cpp  CPythonFunction.h  CPythonGlobalFunction.h  CPythonGlobalVariable.h  CPythonMember.h  CPythonMetaClass.cpp  CPythonMetaClass.h  CPythonModule.cpp  CPythonModule.h  CPythonObject.cpp  CPythonObject.h  CPythonRef.cpp  CPythonRef.h  CPythonRefObject.cpp  CPythonRefObject.h  CPythonType.cpp  CPythonType.h  CPythonVariable.h  Clazz.h  Common.h  Deleter.h  Exception.cpp  Exception.h  ICPythonFunction.h  ICPythonVariable.h  IMemberAccessor.h  InitModule.h  Lock.h  MemberAccessor.h  (+3 more)
src/Core/: Assert.h  Deleter.h  Dictionary.cpp  Dictionary.h  Exception.cpp  Exception.h  Lock.cpp  Lock.h  PythonAssist.h  Stack.cpp  Stack.h  Traits.h  Utils.h
src/Detail/: CPythonObject.h  CPythonType.cpp  CPythonType.h  ClazzContext.h  ClazzPyType.h  ConcreteFunction.h  Constructor.h  Function.h  Member.h  MemberAccessor.h  MetaClass.cpp  MetaClass.h  ModuleContext.h  Object.h  PlainType.h  ReferenceType.h  TypedMemberAccessor.h  TypesContainer.h
src/Types/: AsciiString.cpp  AsciiString.h  Container.cpp  Container.h  DateTime.cpp  DateTime.h  Dictionary.h  Function.cpp  Function.h  List.cpp  List.h  ObjectPtr.h  TimeDelta.cpp  TimeDelta.h  Tuple.cpp  Tuple.h
src/Utility/: Serialize.cpp  Serialize.h  SerializeContext.h  SerializeTypes.cpp  Types.fbs  Types_generated.h
